--- a/About.html
+++ b/About.html
@@ -23,10 +23,10 @@
 <body>
   <div class="sidenav" style="">
 	  <img class="ScaleIcon" src="Images/Icons/EI_Main.png" type="image/png" alt="Girl in a jacket">
-  	  <button onclick="HomeLink()" class="buttonActivMenu"><h3>Home</h3></a></button>
+  	  <button onclick="HomeLink()" class="buttonMenuWithUndercategory" ><h3>Home</h3></a></button>
   	  <button onclick="PreviewsLink()" class="buttonMenuWithUndercategory"><h3>Previews of packs</h3></a></button>
   	  <button onclick="PackagePageLink()" class="buttonMenuWithUndercategory"><h3>All Packs</h3></a></button>
-  	  <button onclick="AboutLink()" class="buttonMenuWithUndercategory"><h3>About</h3></a></button>
+  	  <button onclick="AboutLink()" class="buttonActivMenu"><h3>About</h3></a></button>
 	</div>
 
 	<div class="main">
