--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 </head>
 <body>
   <div class="sidenav" style="">
-	  <img class="ScaleIcon" src="Images/Icons/EI_Main.png" type="image/png" alt="Girl in a jacket">
-  	  <button onclick="HomeLink()" class="buttonActivMenu"><h3>Home</h3></a></button>
-  	  <button onclick="PreviewsLink()" class="buttonMenuWithUndercategory"><h3>Previews of packs</h3></a></button>
-  	  <button onclick="PackagePageLink()" class="buttonMenuWithUndercategory"><h3>All Packs</h3></a></button>
-  	  <button onclick="AboutLink()" class="buttonMenuWithUndercategory"><h3>About</h3></a></button>
+	  <img class="ScaleIcon" src="Images/Icons/EI_Main.png" type="image/png">
+  	  <button onclick="HomeLink()" class="buttonActivMenu"><h3 class="StringHome">Home</h3></a></button>
+  	  <button onclick="PreviewsLink()" class="buttonMenuWithUndercategory"><h3 class="StringPreviews">Preview</h3></a></button>
+  	  <button onclick="PackagePageLink()" class="buttonMenuWithUndercategory"><h3 class="StringPacks">Packs</h3></a></button>
+  	  <button onclick="AboutLink()" class="buttonMenuWithUndercategory"><h3 class="StringAbout">About</h3></a></button>
 	</div>
 
 	<div class="main">
